# python-thermoworks-cloud

./: .coverage  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check-linting.yml  python-package.yml
examples/: basic_get_user.py  get_device_archives.py  get_devices_for_user.py
tests/: auth_test_object.py  conftest.py  core_test_object.py  test_additional_properties.py  test_auth.py  test_core.py  test_data.py
thermoworks_cloud/: __init__.py  auth.py  core.py  utils.py
thermoworks_cloud/models/: __init__.py  archive.py  device.py  device_channel.py  user.py  user_credentials.py
