[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermoworks-cloud"
version = "0.1.0"
description = "Pull data for Thermoworks Cloud enabled thermometers"
authors = [{name = "Austin Hill", email = "austin@nitsua.org"}]
dependencies = [
    "aiohttp >= 3.11.7"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
[project.optional-dependencies]
# pip install -e ".[test]"
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "aioresponses>=0.7.7",
    "pytest_httpserver>=1.1.0",
    "pytest-cov>=6.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "*/tests/*",
]